Veretino 0.4.0
* The database file saving policy has become customizable: if the "Instant Saving" checkbox is checked, the database file will be recreated immediately after any changes are made; if not checked, then at the user's request or when closing.
* This version supports both Qt5 and Qt6 builds.

Internal changes:
* The process management system has been completely rewritten.
* The architecture has been optimized and improved.

Fixes and Minor Enhancements:
* The speed display is brought to the standard form: MiB/sec >> MiB/s
* In the path input field, the clear button is hidden when it doesn't make sense.
* Prevented some database columns from being accidentally hidden on first run.
* When working with a Desktop folder, there is no longer an unnecessary notification of a reserve save path.

---
Veretino 0.3.12
* More accurate and smooth process speed and remaining time.
* After checking a subfolder, filtering of Mismatches is applied only if they were found in this particular subfolder.
* Both extensions are now used when discovering existing Branches.
* Settings tab "Permanent Filter": Fixed the Ignore/Include switch when the list of extensions is empty.

Veretino 0.3.11
* Improved stability when switching databases.
* Improved performance and UI responsiveness.

Veretino 0.3.10
* Improved filter creation/selection.
* The Permanent Filter now has preset templates.
* "Folder Contents" dialog: the database/sha files have become unfilterable.

Veretino 0.3.9
* The checked checksums have become colored.
* The filtered View is highlighted by changing the background.
* A database file with a predefined WorkDir can now be placed in the current one.
* Added the ability to copy files and folders from the database.

Veretino 0.3.8
* Updating the database has become more flexible.
* Added the ability to open previously created Branches.
* The filtered view can also now include independent file statuses.
* Pressing the Escape key disables the filtered view, if any.