@@ -17,9 +17,12 @@ struct MetaData {
     QCryptographicHash::Algorithm algorithm = QCryptographicHash::Sha256;
     QString workDir; // current working folder
     QString databaseFilePath;
-    QString saveDateTime; // date and time the database was saved
-    QString successfulCheckDateTime; // date and time of the last completely successful check
-                                    // (all files from the list are exists and match the checksums)
+
+    QString datetimeCreated;
+    QString datetimeUpdated;
+    QString datetimeVerified; // date and time of the last completely successful check
+                            // (all files from the list are exists and match the checksums)
+
     FilterRule filter;
     enum DbFileState { NoFile, Created, NotSaved, Saved };
     DbFileState dbFileState = NoFile;
