@@ -66,7 +66,7 @@ void Manager::_processFolderSha(const MetaData &metaData)
     calculateChecksums(FileStatus::Queued);
 
     if (!procState->isCanceled()) { // saving to json
-        dataMaintainer->updateDateTime();
+        dataMaintainer->data_->metaData.datetimeCreated = format::currentDateTime();
         dataMaintainer->exportToJson();
         emit dataMaintainer->databaseUpdated();
     }
@@ -192,7 +192,7 @@ void Manager::_updateDatabase(const DestDbUpdate dest)
     }
 
     if (dataMaintainer->isDataNotSaved()) {
-        dataMaintainer->data_->metaData.successfulCheckDateTime.clear();
+        dataMaintainer->data_->metaData.datetimeVerified.clear();
         dataMaintainer->updateDateTime();
 
         if (settings_->instantSaving)
